--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,6 @@
 	},
 	"keywords": [],
 	"dependencies": {
-		"@prisma/client": "^4.9.0",
 		"cloudinary": "^1.33.0",
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.3",
@@ -20,7 +19,6 @@
 		"openai": "^3.1.0"
 	},
 	"devDependencies": {
-		"nodemon": "^2.0.20",
-		"prisma": "^4.9.0"
+		"nodemon": "^2.0.20"
 	}
 }
